# cookiecutter-python-package

./: README.md  cookiecutter.json
{{cookiecutter.project_slug}}/: .bandit  .travis.yml  MANIFEST.in  Makefile  README.rst  appveyor.yml  pyproject.toml  setup.cfg  setup.py  tox.ini
{{cookiecutter.project_slug}}/.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.rst  ISSUE_TEMPLATE.md  SUPPORT.rst
{{cookiecutter.project_slug}}/.github/ISSUE_TEMPLATE/: 01-bug-report.md  02-question.md  03-feature-request.md
{{cookiecutter.project_slug}}/.github/workflows/: cron.yml  main.yml
{{cookiecutter.project_slug}}/docs/source/: conf.py  index.rst
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_module}}/: __init__.py  _version.py  helpers.py
{{cookiecutter.project_slug}}/tests/test_integration/: test_api.py
{{cookiecutter.project_slug}}/tests/test_unit/: test_helpers.py
