[metadata]
name = {{cookiecutter.project_slug}}
url = https://github.com/{{cookiecutter.github_username}}/{{cookiecutter.project_slug}}
download_url = https://pypi.org/project/{{cookiecutter.project_slug}}/
author =
    {{cookiecutter.full_name}}
author_email =
    {{cookiecutter.email}}
# Please consult https://pypi.org/classifiers/ for a full list.
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: Unix
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering :: Bio-Informatics
license = Apache Software License Version 2.0
description = {{cookiecutter.project_short_description}}
long_description = file: README.rst
keywords =

[options]
zip_safe = True
install_requires =
    depinfo
python_requires = >=3.6
tests_require =
    tox
packages = find:
package_dir =
     = src

[options.packages.find]
where = src

[options.extras_require]
development =
    black
    isort
    tox

[bdist_wheel]
universal = 1

# See the docstring in versioneer.py for instructions. Note that you must
# re-run 'versioneer.py setup' after changing this section, and commit the
# resulting files.

[versioneer]
VCS = git
style = pep440
versionfile_source = src/{{cookiecutter.project_module}}/_version.py
versionfile_build = {{cookiecutter.project_module}}/_version.py
tag_prefix =
parentdir_prefix = {{cookiecutter.project_module}}-

